<?xml version="1.0"?>
<package>
  <name>robot_navigation</name>
  <version>1.0.0</version>
  <description>The robot_navigation package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/pluto_apps/robot_navigation</url>

  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>robot_navigation_state</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>robot_navigation_state</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
